@@ -75,7 +75,7 @@
  *           instead of   AuthDBMUserFile    AuthDBMGroupFile
  *
  * Also, in the configuration file you need to specify
- *  db_auth_module rather than auth_dbm_module
+ *  auth_db_module rather than auth_dbm_module
  *
  * On some BSD systems (e.g. FreeBSD and NetBSD) dbm is automatically
  * mapped to Berkeley DB. You can use either mod_auth_dbm or
@@ -161,7 +161,7 @@ static const command_rec db_auth_cmds[] =
     {NULL}
 };
 
-module db_auth_module;
+module auth_db_module;
 
 static char *get_db_pw(request_rec *r, char *user, const char *auth_dbpwfile)
 {
@@ -293,7 +293,7 @@ static int db_authenticate_basic_user(request_rec *r)
 {
     db_auth_config_rec *sec =
     (db_auth_config_rec *) ap_get_module_config(r->per_dir_config,
-						&db_auth_module);
+						&auth_db_module);
     const char *sent_pw;
     char *real_pw, *colon_pw;
     apr_status_t invalid_pw;
@@ -341,7 +341,7 @@ static int db_check_auth(request_rec *r)
 {
     db_auth_config_rec *sec =
     (db_auth_config_rec *) ap_get_module_config(r->per_dir_config,
-						&db_auth_module);
+						&auth_db_module);
     char *user = r->user;
     int m = r->method_number;
 
@@ -404,7 +404,7 @@ static void register_hooks(apr_pool_t *p)
     ap_hook_auth_checker(db_check_auth,NULL,NULL,APR_HOOK_MIDDLE);
 }
 
-module db_auth_module =
+module auth_db_module =
 {
     STANDARD20_MODULE_STUFF,
     create_db_auth_dir_config,	/* dir config creater */
