@@ -8,7 +8,7 @@ APACHE_MODULE(vhost_alias, mass hosting module, , , no)
 APACHE_MODULE(negotiation, content negoatiation, , , yes)
 APACHE_MODULE(dir, directory request handling, , , yes)
 APACHE_MODULE(imap, internal imagemaps, , , yes)
-APACHE_MODULE(actions, Action triggering on requests, , action, yes)
+APACHE_MODULE(actions, Action triggering on requests, , , yes)
 APACHE_MODULE(speling, correct common URL misspellings, , , no)
 APACHE_MODULE(userdir, mapping of user requests, , , yes)
 APACHE_MODULE(alias, translation of requests, , , yes)
