@@ -1,5 +1,10 @@
 Changes with Apache 2.0.12-dev
 
+  *) Rename the module structures so that the exported symbol matches
+     the file name, and it is easier to automate the installation
+     process (generating LoadModule directives from the module filenames).
+     [Martin Kraemer]
+
   *) Remove the coalesce filter.  With the ap_f* functions, this filter
      is no longer needed. [Ryan Bloom]
 
